--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.5.0",
+    "postcss-mixins": "^6.2.3",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
     "stylelint": "^13.9.0",
     "stylelint-config-prettier": "^8.0.2",
