--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/composition-api": "^0.22.0",
     "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/svg-sprite": "^0.5.2",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12"
   },
