--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/composition-api": "^0.22.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/svg-sprite": "^0.5.2",
+    "body-scroll-lock": "^3.1.5",
     "core-js": "^3.8.3",
     "graphql-tag": "^2.11.0",
     "nuxt": "^2.15.2",
