--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "dependencies": {
     "@nuxtjs/apollo": "^4.0.1-rc.5",
     "@nuxtjs/axios": "^5.12.5",
-    "@nuxtjs/composition-api": "^0.22.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/svg-sprite": "^0.5.2",
     "body-scroll-lock": "^3.1.5",
     "core-js": "^3.8.3",
     "graphql-tag": "^2.11.0",
     "nuxt": "^2.15.2",
-    "nuxt-i18n": "^6.20.6"
+    "nuxt-i18n": "^6.20.6",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^5.0.0",
