--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/svg-sprite": "^0.5.2",
+    "@vue-a11y/announcer": "^2.1.0",
     "body-scroll-lock": "^3.1.5",
     "core-js": "^3.8.3",
     "graphql-tag": "^2.11.0",
